# LearningHDK

Terrain/: CMakeLists.txt  SOP_Terrain.cpp  SOP_Terrain.hpp  SOP_Terrain.proto.h
Terrain/TerrainModel/: CMakeLists.txt  DiffusionFunctions.hpp  Lookup.hpp  Nutrients.cpp  Nutrients.hpp  Settings.hpp  SurfaceComposition.hpp  TerrainAgent.cpp  TerrainAgent.hpp  TerrainFormation.cpp  TerrainFormation.hpp  TerrainFormationConstructors.cpp  TerrainFormationProcess.cpp  TerrainMessage.cpp  TerrainMessage.hpp  TerrainSimulation.cpp  TerrainSimulation.hpp  Water.cpp  Water.hpp  main.cpp  todos.md
Terrain/TerrainModel/Utility/: Math.hpp  Vector.cpp  Vector.hpp
